<?xml version="1.0"?>
<package>
  <name>acoustic_magic_msgs</name>
  <version>0.0.0</version>
  <description>The acoustic_magic_msgs package</description>
  <maintainer email="shengye@todo.todo">shengye</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
