<?xml version="1.0"?>
<package>
  <name>cogrob_navigation_msgs</name>
  <version>0.0.0</version>
  <description>The cogrob_navigation_msgs package</description>

  <maintainer email="shengye@todo.todo">shengye</maintainer>
  <license>TODO</license>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
