<?xml version="1.0"?>
<package>
  <name>cogrob_robot_state_msgs</name>
  <version>0.0.0</version>
  <description>The cogrob_robot_state_msgs package</description>

  <maintainer email="shengye@todo.todo">shengye</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
