<?xml version="1.0"?>
<package format="2">
  <name>cogrob_rosbag_msgs</name>
  <version>0.0.0</version>
  <description>The cogrob_rosbag_msgs package</description>
  <maintainer email="shengye@todo.todo">shengye</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
