<?xml version="1.0"?>
<package>
  <name>greeting_bot_state_machine</name>
  <version>0.0.0</version>
  <description>The greeting_bot_state_machine package</description>

  <maintainer email="shengye@todo.todo">shengye</maintainer>

  <license>TODO</license>

  <build_depend>cogrob_listen_intent</build_depend>
  <build_depend>cogrob_rosbag_msgs</build_depend>
  <run_depend>cogrob_listen_intent</run_depend>
  <run_depend>cogrob_rosbag_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
