<?xml version="1.0"?>
<package>
  <name>openface_client</name>
  <version>0.0.0</version>
  <description>The openface_client package</description>

  <maintainer email="shengye@todo.todo">shengye</maintainer>

  <license>TODO</license>

  <build_depend>grpc</build_depend>
  <run_depend>cogrob_face_msgs</run_depend>
  <run_depend>grpc</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
