<?xml version="1.0"?>
<package format="2">
  <name>cogrob_use_system_opencv</name>
  <version>0.0.0</version>
  <description>The cogrob_use_system_opencv package</description>

  <maintainer email="shengye@todo.todo">shengye</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
